# MaaPipelineEditor

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  attr_change.md  develop.md  eslint.config.js  iconfont.json  index.html  package-lock.json  package.json  vite.config.ts
.qoder/: TODO.md  (+2 more)
Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/src-tauri/capabilities/: main.json
Desktop/src-tauri/icons/: icon.icns
Desktop/src-tauri/src/: bridge.rs  commands.rs  environment.rs  error.rs  lib.rs  main.rs  models.rs  process_group.rs  python.rs  settings.rs  tray.rs
LocalBridge/: .air.toml  .gitignore  Agreement.md  DEVELOPMENT.md  README.md  go.mod  go.sum  package.json  pyproject.toml
LocalBridge/cmd/lb/: main.go  signal_unix.go  signal_windows.go
LocalBridge/config/: default.json
LocalBridge/internal/config/: config.go
LocalBridge/internal/debug/api/: handler.go
LocalBridge/internal/debug/artifact/: store.go
LocalBridge/internal/debug/batch/: service.go
LocalBridge/internal/debug/diagnostics/: resource_diagnostics.go  resource_health.go  resource_health_test.go  service.go  service_test.go
LocalBridge/internal/errors/: errors.go
LocalBridge/internal/eventbus/: eventbus.go
LocalBridge/internal/logger/: logger.go
LocalBridge/internal/mfw/: adapter.go  controller_manager.go  controller_screenshot.go  debug_service.go  debug_service_v2.go  device_manager.go  error.go  event_sink.go  fixed_controller.go  lib_loader_unix.go  lib_loader_windows.go  path_unix.go  path_windows.go  pipeline_engine.go  reco_detail_helper.go  resource_bundle_resolver.go  resource_bundle_resolver_test.go  resource_manager.go  screenshot_image.go  screenshot_resolution.go  service.go  task_manager.go  types.go
LocalBridge/internal/paths/: paths.go
LocalBridge/internal/router/: router.go
LocalBridge/internal/server/: connection.go  websocket.go
LocalBridge/internal/updater/: updater.go
LocalBridge/internal/utils/: jsonc.go  update.go
LocalBridge/pkg/models/: file.go  message.go  mfw.go  resource.go
LocalBridge/schema/: protocol-v2.schema.json
LocalBridge/src/mpe_localbridge/: __init__.py  artifacts.py  cli.py  config.py  constants.py  debug_runtime.py  errors.py  event_log.py  fixed_controller.py  logging_config.py  maa_runtime.py  models.py  paths.py  project_interface.py  schema.py  server.py  watcher.py  workspace.py
LocalBridge/tests/: conftest.py  test_artifacts.py  test_cli.py  test_config.py  test_debug_runtime.py  test_documents.py  test_event_log.py  test_fixed_controller.py  test_logging_config.py  test_maa_runtime.py  test_models.py  test_paths.py  test_project_interface.py  test_schema.py  test_server.py  test_watcher.py  test_workspace.py  workspace_helpers.py
LocalBridge/tests/integration/: test_maafw_native.py
(+2003 files in other folders)
