[package]
name = "maa-pipeline-editor-desktop"
version = "2.0.0"
description = "Desktop host for MaaPipelineEditor"
authors = ["MaaPipelineEditor contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/kqcoxn/MaaPipelineEditor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maa_pipeline_editor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
atomicwrites = "0.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
